--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,9 @@ jobs:
       - run:
           name: Build Application
           command: yarn build
+      - persist_to_workspace:
+          root: .
+          paths: public
   unit-tests:
     <<: *defaults
     steps:
@@ -45,6 +48,21 @@ jobs:
       - run:
           name: Unit Tests
           command: yarn test
+  feature-tests:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          <<: *restore-cache
+      - run:
+          name: Start application server
+          command: yarn serve
+          background: true
+      - run:
+          name: Feature Tests
+          command: yarn test:features
 workflows:
   version: 2
   build-and-test:
@@ -56,3 +74,6 @@ workflows:
       - unit-tests:
           requires:
             - install
+      - feature-tests:
+          requires:
+            - build
