Make lint step run in parallel as it isn't a requirement for the unit tests/build to run

--- a/circle.yml
+++ b/circle.yml
@@ -84,10 +84,10 @@ workflows:
             - install
       - build:
           requires:
-            - lint
+            - install
       - unit-tests:
           requires:
-            - lint
+            - install
       - feature-tests:
           requires:
             - build
