Moved baseUrl configuration to cypress.json, changed ci to run seperate scripts from package.json, and made CI run server on the same port for convenience of configuration

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ yarn-error.log
 # Test outputs we shouldn't commit
 cypress/videos
 cypress/screenshots
+
+# Environment configuration we shouldn't commit
+/cypress.env.json
