--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,12 @@
         "specialLink": ["to"],
         "aspects": ["noHref", "invalidHref", "preferButton"]
       }
+    ],
+    "no-unused-expressions": [
+      "error",
+      {
+        "allowTaggedTemplates": true
+      }
     ]
   },
   "plugins": ["eslint-plugin-import"],
