Added a simple Header component with styling that somewhat matches the design so far

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,12 @@
           }
         ]
       }
+    },
+    {
+      "files": ["**/styled.js"],
+      "rules": {
+        "import/prefer-default-export": 0
+      }
     }
   ]
 }
