--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-graphcms": "^0.0.1",
+    "graphql-tag": "^2.9.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-helmet": "^5.2.0",
+    "react-markdown": "^3.3.2",
     "styled-components": "^3.2.6",
     "styled-normalize": "^4.0.0"
   },
