Cleaned up BlogPost page, added a /blog route to list blog posts, added some Jest configuration to support  stripping like Gatsby does (in case we have a test which bumps into a file exposing a query)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cypress": "cypress open"
   },
   "devDependencies": {
+    "babel-jest": "^22.4.3",
     "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
