Convert existing graphcms code into contentful

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-GRAPHCMS_ENDPOINT=https://api.graphcms.com/simple/v1/yld
-GRAPHCMS_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJp
+CONTENTFUL_SPACE="asdafajgn"
+CONTENTFUL_TOKEN="cb51149b3f1c1b066"
