--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-source-graphcms": "^0.0.1",
+    "gatsby-source-contentful": "^1.3.51",
     "graphql-tag": "^2.9.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
