--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react": "^16.3.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.2.6",
+    "styled-components-breakpoint": "^2.0.2",
     "styled-normalize": "^4.0.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
