Added babel-plugin-module-resolver and configured it to resolve ./src as a root, and also added an eslint plugin to understand this change

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,5 +45,10 @@
         "import/prefer-default-export": 0
       }
     }
-  ]
+  ],
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  }
 }
