--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,13 @@
     "test": {
       "presets": [["env"], "react"]
     }
-  }
+  },
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./src"]
+      }
+    ]
+  ]
 }
