--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
+    "jest-styled-components": "^5.0.1",
     "prettier": "^1.12.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
