Added selectors which allow for less brittle element search in feature tests

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,15 @@
       "plugins": [["babel-plugin-styled-components", { "displayName": true }]]
     },
     "production": {
-      "plugins": [["babel-plugin-styled-components", { "displayName": false }]]
+      "plugins": [
+        ["babel-plugin-styled-components", { "displayName": false }],
+        [
+          "babel-plugin-remove-attribute",
+          {
+            "attribute": "data-selector"
+          }
+        ]
+      ]
     }
   },
   "plugins": [
