--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-source-filesystem": "^1.5.36",
+    "gatsby-transformer-yaml": "^1.5.17",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-helmet": "^5.2.0",
+    "recompose": "^0.27.1",
     "styled-components": "^3.2.6",
     "styled-components-breakpoint": "^2.0.2",
     "styled-normalize": "^4.0.0"
