--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,16 @@
 {
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions"]
+        }
+      }
+    ],
+    "react"
+  ],
   "env": {
-    "test": {
-      "presets": [["env"], "react"],
-      "plugins": [["babel-plugin-styled-components", { "displayName": true }]]
-    },
     "production": {
       "plugins": [
         ["babel-plugin-styled-components", { "displayName": false }],
