Add more items to case study template, use TagList for case study tags

--- a/data/case-studies/trainline.yml
+++ b/data/case-studies/trainline.yml
@@ -1,3 +1,9 @@
-slug: 'trainline'
-pageTitle: 'Case Study: The Trainline'
-title: 'The Trainline'
+slug: trainline
+pageTitle: 'Case Study: Trainline'
+title: Trainline
+shortDescription: >
+  A legacy platform that faced a huge pressure to have an updated interface.
+tags:
+  - Engineering
+  - DevOps
+  - Backend
