--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-filesystem": "^1.5.36",
+    "gatsby-transformer-sharp": "^1.6.24",
     "gatsby-transformer-yaml": "^1.5.17",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
