--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "gatsby-plugin-sharp": "^1.6.44",
     "jest": "^22.4.3",
     "jest-styled-components": "^5.0.1",
     "prettier": "^1.12.0",
