Add a rule to support GatsbyImage in eslintrc for image alt text

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,13 @@
         "aspects": ["noHref", "invalidHref", "preferButton"]
       }
     ],
+    "jsx-a11y/alt-text": [
+      "error",
+      {
+        "elements": ["img", "object", "area", "input[type=\"image\"]"],
+        "img": ["GatsbyImage"]
+      }
+    ],
     "no-unused-expressions": [
       "error",
       {
