--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "styled-components-breakpoint": "^2.0.2",
     "styled-normalize": "^4.0.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -44,6 +42,12 @@
     "test:features": "cypress run",
     "lint": "eslint '{src,spec,cypress}/**/*.{js,jsx}'",
     "cypress": "cypress open"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && yarn lint",
+      "pre-push": "yarn test"
+    }
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
@@ -64,9 +68,11 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "gatsby-plugin-sharp": "^1.6.44",
+    "husky": "^1.0.0-rc.7",
     "jest": "^22.4.3",
     "jest-styled-components": "^5.0.1",
     "prettier": "^1.12.0",
+    "pretty-quick": "^1.6.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
   }
