--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "recompose": "^0.27.1",
     "styled-components": "^3.2.6",
     "styled-components-breakpoint": "^2.0.2",
-    "styled-normalize": "^4.0.0"
+    "styled-reset": "^1.3.4"
   },
   "keywords": ["gatsby"],
   "license": "MIT",
