--- a/data/case-studies/trainline.yml
+++ b/data/case-studies/trainline.yml
@@ -19,3 +19,28 @@ success:
       Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
 
       Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
+metrics: 
+    - parameter: Increase in traffic
+      value: 57%
+      change: 0.04%
+    - parameter: Impressions per visitor
+      value: '2.8'
+      change: 1.48%
+    - parameter: Unique visitors
+      value: 20,345
+      change: 10.85%
+    - parameter: Increase in traffic
+      value: 57%
+      change: 0.04%
+    - parameter: Impressions per visitor
+      value: '2.8'
+      change: 1.48%
+    - parameter: Unique visitors
+      value: 20,345
+      change: 10.85%
+
+
+
+
+
+
