--- a/data/case-studies/trainline.yml
+++ b/data/case-studies/trainline.yml
@@ -19,16 +19,17 @@ success:
       Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
 
       Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
-quotesImage: quoteImage.jpg
-quotesImageAlt: Quote image
-quotes: |
-      "YLD offered amazing service, support and care and delivered ontime and under budget. I don't know what else to say. 
-      I am completely blown away."
-quoteAuthor: Casey Bisson
-quotePosition: Senior Director of Product Management - Joyent
-subDescription: |
-      Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
+quote:
+    image: quoteImage.jpg
+    imageAlt: Quote image
+    quote: |
+          "YLD offered amazing service, support and care and delivered ontime and under budget. I don't know what else to say. 
+          I am completely blown away."
+    author: Casey Bisson
+    position: Senior Director of Product Management - Joyent
+    subDescription: |
+          Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
 
-      Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
-clientAppImage: clientAppImage.jpg
-clientAppImageAlt: Client App Image
+          Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too. Some amazing support copy with go here to reenforce whatever section it is relevant too.
+    clientAppImage: clientAppImage.jpg
+    clientAppImageAlt: Client App Image
