--- a/data/case-studies/trainline.yml
+++ b/data/case-studies/trainline.yml
@@ -35,13 +35,13 @@ metrics:
     - parameter: Unique visitors
       value: 20,345
       change: 10.85%
-    - parameter: Increase in traffic
+    - parameter: The Increase in traffic
       value: 57%
       change: -0.04%
-    - parameter: Impressions per visitor
+    - parameter: The Impressions per visitor
       value: '2.8'
       change: 1.48%
-    - parameter: Unique visitors
+    - parameter: The Unique visitors
       value: 20,345
       change: -10.85%
 quote:
