--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
     "date-fns": "^1.29.0",
+    "dotenv": "^6.0.0",
     "gatsby": "^1.9.259",
     "gatsby-image": "^1.0.51",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-source-contentful": "^1.3.52",
     "gatsby-source-filesystem": "^1.5.36",
     "gatsby-transformer-sharp": "^1.6.24",
     "gatsby-transformer-yaml": "^1.5.17",
