--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.2",
     "recompose": "^0.27.1",
+    "remcalc": "^1.0.10",
     "styled-components": "^3.2.6",
     "styled-components-breakpoint": "^2.0.2",
     "styled-reset": "^1.3.4"
