--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "remcalc": "^1.0.10",
     "styled-components": "^3.2.6",
     "styled-components-breakpoint": "^2.0.2",
+    "styled-is": "^1.1.3",
     "styled-reset": "^1.3.4"
   },
   "keywords": ["gatsby"],
