added a11y exception for video subtitles, added colours of headlines to data file, colours on headlines display as intended

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
       {
         "allowTaggedTemplates": true
       }
-    ]
+    ],
+    "jsx-a11y/media-has-caption": 0
   },
   "plugins": ["eslint-plugin-import", "prettier"],
   "overrides": [
