--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "styled-is": "^1.1.3",
     "styled-reset": "^1.3.4"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -52,8 +54,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && yarn lint",
-      "pre-push": "yarn test"
+      "pre-commit": "pretty-quick --staged && yarn lint"
     }
   },
   "devDependencies": {
