--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recompose": "^0.27.1",
     "remcalc": "^1.0.10",
     "styled-components": "^3.3.2",
+    "styled-components-breakpoint": "^2.0.2",
     "styled-components-spacing": "^3.0.1",
     "styled-flex-component": "^2.2.2",
     "styled-is": "^1.1.3",
