--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-contentful": "^1.3.53",
     "gatsby-transformer-sharp": "^1.6.26",
+    "param-case": "^2.1.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-helmet": "^5.2.0",
