--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ci:unit-tests": "yarn test",
     "ci:feature-tests": "yarn test:features",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.{js,jsx}'",
+    "format": "prettier --config .prettierrc --write '**/*'",
     "serve": "gatsby serve",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,26 +24,26 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "^0.0.20",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.0",
     "build-array": "^1.0.0",
     "dotenv": "^6.0.0",
-    "gatsby": "^1.9.271",
-    "gatsby-image": "^1.0.53",
+    "gatsby": "^1.9.272",
+    "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.44",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-source-contentful": "^1.3.53",
-    "gatsby-transformer-sharp": "^1.6.26",
+    "gatsby-source-contentful": "^1.3.54",
+    "gatsby-transformer-sharp": "^1.6.27",
     "lodash.find": "^4.6.0",
     "param-case": "^2.1.1",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-styled-flexboxgrid": "^2.4.0",
     "recompose": "^0.27.1",
     "remcalc": "^1.0.10",
-    "styled-components": "^3.3.2",
+    "styled-components": "^3.3.3",
     "styled-components-breakpoint": "^2.0.2",
     "styled-components-spacing": "^3.0.1",
     "styled-flex-component": "^2.2.2",
@@ -51,6 +51,8 @@
     "styled-reset": "^1.3.5"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-remove-attribute": "^0.0.8",
     "babel-plugin-styled-components": "^1.5.1",
@@ -71,6 +73,7 @@
     "jest-styled-components": "^5.0.1",
     "prettier": "^1.13.5",
     "pretty-quick": "^1.6.0",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-test-renderer": "^16.4.1"
   }
 }
