--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-xo-space": "^0.18.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-cypress": "^2.0.1",
+    "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
     "husky": "^1.0.0-rc.7",
     "jest": "^23.1.0",
