--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-sharp": "^1.6.27",
+    "graphql-tag": "^2.9.2",
     "lodash.find": "^4.6.0",
     "param-case": "^2.1.1",
     "prop-types": "^15.6.2",
