--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-styled-flexboxgrid": "^2.4.0",
+    "react-youtube": "^7.6.0",
     "recompose": "^0.27.1",
     "remcalc": "^1.0.10",
     "styled-components": "^3.3.3",
