--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@fortawesome/react-fontawesome": "^0.1.0",
     "build-array": "^1.0.0",
     "dotenv": "^6.0.0",
-    "gatsby": "^1.9.272",
+    "gatsby": "^1.9.273",
     "gatsby-image": "^1.0.54",
-    "gatsby-link": "^1.6.44",
+    "gatsby-link": "^1.6.45",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-contentful": "^1.3.54",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.0.1",
+    "babel-jest": "^23.2.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-remove-attribute": "^0.0.8",
     "babel-plugin-styled-components": "^1.5.1",
@@ -63,20 +63,21 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^4.19.1",
+    "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-xo-react": "^0.16.0",
-    "eslint-config-xo-space": "^0.18.0",
+    "eslint-config-xo-space": "^0.19.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-cypress": "^2.0.1",
     "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react": "^7.10.0",
     "husky": "^1.0.0-rc.7",
-    "jest": "^23.1.0",
+    "jest": "^23.2.0",
     "jest-styled-components": "^5.0.1",
-    "prettier": "^1.13.5",
+    "prettier": "^1.13.6",
     "pretty-quick": "^1.6.0",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.1"
   }
 }
