--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.45",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-sharp": "^1.6.27",
@@ -50,8 +51,7 @@
     "styled-components-breakpoint": "^2.0.2",
     "styled-components-spacing": "^3.0.1",
     "styled-flex-component": "^2.2.2",
-    "styled-is": "^1.1.3",
-    "styled-reset": "^1.3.5"
+    "styled-is": "^1.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
