--- a/circle.yml
+++ b/circle.yml
@@ -52,32 +52,30 @@ jobs:
           paths: public
   unit-tests:
     <<: *defaults
-    environment:
-      - BABEL_ENV: test
     steps:
       - checkout
       - restore_cache:
           <<: *restore-cache
       - run:
-          name: Build Application
+          name: Unit Tests
           command: yarn ci:unit-tests
-      - persist_to_workspace:
-          root: .
-          paths: public
   feature-tests:
     <<: *defaults
-    environment:
-      - BABEL_ENV: test
+    docker:
+      - image: cypress/base:8
     steps:
       - checkout
+      - attach_workspace:
+          at: .
       - restore_cache:
           <<: *restore-cache
       - run:
-          name: Build Application
+          name: Start application server
+          command: yarn ci:start-server
+          background: true
+      - run:
+          name: Feature Tests
           command: yarn ci:feature-tests
-      - persist_to_workspace:
-          root: .
-          paths: public
 
 workflows:
   version: 2
