--- a/circle.yml
+++ b/circle.yml
@@ -70,6 +70,9 @@ jobs:
       - restore_cache:
           <<: *restore-cache
       - run:
+          name: Force Cypress Install
+          command: npm i cypress
+      - run:
           name: Start application server
           command: yarn ci:start-server
           background: true
