--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-sharp": "^1.6.27",
+    "google-map-react": "^1.0.5",
     "graphql-tag": "^2.9.2",
     "lodash.find": "^4.6.0",
     "months": "^2.0.0",
