--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,13 @@
   ],
   "rules": {
     "react/prop-types": 0,
-    "new-cap": 0
+    "new-cap": 0,
+    "jsx-a11y/alt-text": 2
   },
   "env": {
     "jest": true
-  }
+  },
+  "plugins": [
+    "jsx-a11y"
+  ]
 }
