--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "eslint-config-xo-space": "^0.19.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-cypress": "^2.0.1",
-    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "husky": "^1.0.0-rc.7",
     "jest": "^23.2.0",
